# playwright-test-pageobjects

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
app/config/: config.toml
app/core/: element.py  filedefinitions.py  logger.py  playwrightbrowser.py
app/data/: newComputers.json
app/helpers/: utils.py
app/locators/: computers.py  newcomputer.py
app/models/: newcomputermodel.py
app/pages/: addcomputerpage.py  computerspage.py
app/selectors/: computers.py  newcomputer.py
results/: report.html
src/core/: baseelement.py  basepage.py  element.py  elementtypes.py  filedefinitions.py  playwrightbrowser.py
src/helpers/: utils.py
src/locators/: computerslocators.py  newcomputer.py
src/models/: newcomputermodel.py
src/pages/: addcomputerpage.py  computerspage.py
src/selectors/: computers.py
tests/: conftest.py  test_api.py  test_application.py  test_example.py  test_multiple.py  test_my_application.py  test_sample.py
